--- a/view/index.html
+++ b/view/index.html
@@ -28,6 +28,10 @@
             margin-bottom: 0.25rem;
         }
     </style>
+    <script>
+        // 網路速率
+        let network_data_rate = {network_data_rate};
+    </script>
 </head>
 <body>
 
@@ -40,7 +44,7 @@
                     <blockquote class="blockquote">
                         <p class="title">CPU 型號</p>
                     </blockquote>
-                    <figcaption class="mb-0 text-muted message">{{cpu}}</figcaption>
+                    <figcaption class="mb-0 text-muted message">{cpu}</figcaption>
                 </figure>
             </div>
         </div>
@@ -51,7 +55,7 @@
                     <blockquote class="blockquote">
                         <p class="title">記憶體</p>
                     </blockquote>
-                    <figcaption class="mb-0 text-muted message">{{ram}}MB</figcaption>
+                    <figcaption class="mb-0 text-muted message">{ram}MB</figcaption>
                 </figure>
             </div>
         </div>
@@ -62,7 +66,7 @@
                     <blockquote class="blockquote">
                         <p class="title">硬碟</p>
                     </blockquote>
-                    <figcaption class="mb-0 text-muted message">{{hdd}}MB</figcaption>
+                    <figcaption class="mb-0 text-muted message">{hdd}MB</figcaption>
                 </figure>
             </div>
         </div>
@@ -166,11 +170,10 @@
             data: []
         },
         yAxis: {
-            max: 100,
+            max: network_data_rate,
         },
         series: [{
-            showSymbol: false,
-            // symbolSize: 4,
+            symbolSize: 4,
             name: '流量',
             type: 'line',
             smooth: true,
@@ -205,17 +208,6 @@
                 if ( json['result'] === true ){
 
                     let h = '';
-
-                    // Object.entries(json['usage']).forEach(entry => {
-                    //     const [k, v] = entry;
-                    //     console.log(k, v);
-                    // });
-
-                    // for( const[k,v] of Object.entries(json['usage'])){
-                    //     console.log(k);
-                    //     console.log(v);
-                    // }
-
                     $.each( json['usage'], function(k,v){
 
                         let t = $('#template_usage').clone();
